<?xml version="1.0"?>
<package>
  <name>eca_a9_description</name>
  <version>0.1.0</version>
  <description>Robot description for the ECA A9 AUV</description>

  <maintainer email="thp@eca.fr">Thibault Pelletier</maintainer>
  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="thp@eca.fr">Thibault Pelletier</author>
  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>uuv_descriptions</run_depend>
  <run_depend>uuv_gazebo_ros_plugins</run_depend>
  <run_depend>uuv_sensor_ros_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>message_to_tf</run_depend>
</package>
