<?xml version="1.0"?>
<package format="2">
  <name>eca_a9_gazebo</name>
  <version>0.1.3</version>
  <description>Package with launch files for demonstrations with the ECA A9 AUV</description>

  <maintainer email="thp@eca.fr">Thibault Pelletier</maintainer>
  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="thp@eca.fr">Thibault Pelletier</author>
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>eca_a9_description</exec_depend>
  <exec_depend>eca_a9_control</exec_depend>

</package>
