<?xml version="1.0"?>
<package>
  <name>eca_a9_control</name>
  <version>0.1.3</version>
  <description>Configuration and launch files to control the ECA A9 AUV</description>

  <maintainer email="thp@eca.fr">Thibault Pelletier</maintainer>
  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="thp@eca.fr">Thibault Pelletier</author>
  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>uuv_teleop</run_depend>
  <run_depend>uuv_trajectory_control</run_depend>
</package>
